--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,16 +3,21 @@
 
 
 
-/* 
-body {
-  @apply bg-white dark:bg-dark;
-} */
-
-
 body {
   background-color: #ffffff;
+  border-color: #E0E4EA;
 }
 
 .dark body {
   background-color: #232530;
+  border-color: rgba(82, 88, 102, 0.6);
+}
+
+/* Sidebar specific border style */
+.sidebar-border {
+  border-right: 1px solid #E0E4EA;
+}
+
+.dark .sidebar-border {
+  border-right: 1px solid rgba(82, 88, 102, 0.6);
 }
